_themes/tm3/css/contact.css
.hero
{
    background-position: center center;
    margin-bottom: 24px;
    padding-top: 60px;
}

.hero:last-of-type { margin-bottom: 0; }

.tile
{
    bottom: 20px;
    position: absolute;
    z-index: 4;
}

.tile.right { right: 24px; text-align: right; }

.tile:last-of-type { bottom: 0; }

.hero * { color: #FFF; }

